// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: .prettierrc in json format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
{"printWidth": 100,
"overrides": [
  {"files": ".prettierrc",
    "options": {"parser": "json"
  }},
  {"files": "*.js",
    "options": {"parser": "babel",
  "singleQuote": true,"printWidth": 80,"semi":
false,
"quoteProps": "as-needed"
  }}
]}
=====================================output=====================================
{
  "printWidth": 100,
  "overrides": [
    { "files": ".prettierrc", "options": { "parser": "json" } },
    {
      "files": "*.js",
      "options": {
        "parser": "babel",
        "singleQuote": true,
        "printWidth": 80,
        "semi": false,
        "quoteProps": "as-needed"
      }
    }
  ]
}

================================================================================
`;

exports[`snippet: .prettierrc in json(empty) format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
{}
=====================================output=====================================
{}

================================================================================
`;

exports[`snippet: .prettierrc in yaml (with flowMapping) format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
# comment
printWidth: 100
overrides: {
  "files": [".prettierrc", "prettierrc.json"],
  "options": { "parser": "json"}
}
=====================================output=====================================
# comment
printWidth: 100
overrides:
  {
    "files": [".prettierrc", "prettierrc.json"],
    "options": { "parser": "json" },
  }

================================================================================
`;

exports[`snippet: .prettierrc in yaml format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
# comment
printWidth: 100
overrides:
  - files: '.prettierrc'
    options:
      parser: "json"
=====================================output=====================================
# comment
printWidth: 100
overrides:
  - files: ".prettierrc"
    options:
      parser: "json"

================================================================================
`;

exports[`test.html format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
<foo>
                 <bar/>
</foo>

=====================================output=====================================
<foo>
  <bar />
</foo>

================================================================================
`;

exports[`test.importmap format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
{"imports": {
    "prettier": "https://unpkg.com/prettier@2.6.2/esm/standalone.mjs",
    "prettier/": "https://unpkg.com/prettier@2.6.2/"
  }
}

=====================================output=====================================
{
  "imports": {
    "prettier": "https://unpkg.com/prettier@2.6.2/esm/standalone.mjs",
    "prettier/": "https://unpkg.com/prettier@2.6.2/"
  }
}

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
foo(
                 'bar')

=====================================output=====================================
foo("bar");

================================================================================
`;

exports[`test.json format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
{foo:
                 'bar'}

=====================================output=====================================
{ "foo": "bar" }

================================================================================
`;

exports[`test.ts format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
type foo =
                 'bar'

=====================================output=====================================
type foo = "bar";

================================================================================
`;

exports[`test.wxs format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
var msg =
"hello world";

module.exports.message = msg;

=====================================output=====================================
var msg = "hello world";

module.exports.message = msg;

================================================================================
`;

exports[`test.wxss format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
view.foo {font-size: 14rpx;
}

=====================================output=====================================
view.foo {
  font-size: 14rpx;
}

================================================================================
`;

exports[`test.yml format 1`] = `
====================================options=====================================
parsers: []
                                                      printWidth: 80 (default) |
=====================================input======================================
foo:
                 - 'bar'

=====================================output=====================================
foo:
  - "bar"

================================================================================
`;
